# academic-mcp

./: .env.example  .gitignore  LICENSE  README.md  SEMANTIC_INDEX_CONTEXT.md  diagnose_semantic.py  pyproject.toml  test_search_logic.py
.github/workflows/: docker-publish.yml
deploy/: README.md  docker-run-mcp.sh  docker-run-scrapling.sh  reverse-proxy.md
deploy/macbook/: com.example.zotero-sync.plist  zotero-sync.sh
docker/: Dockerfile  README.md  entrypoint.sh  healthcheck.py
src/academic_mcp/: __init__.py  __main__.py  apis.py  auth.py  chunking.py  config.py  content_extractor.py  core_api.py  cross_reranker.py  embeddings.py  models.py  pdf_extractor.py  pdf_fetcher.py  reranker.py  scite.py  semantic_index.py  server.py  text_cache.py  web_search.py  zotero.py  zotero_import.py  zotero_sqlite.py
src/academic_mcp/core/: __init__.py  background.py  citations.py  fetch.py  highlights.py  in_article.py  libraries.py  paper.py  search.py  semantic.py  types.py
src/academic_mcp/http/: README.md  __init__.py  app.py  article_store.py  auth.py  persistence.py  routes_article.py  routes_citations.py  routes_saved.py  routes_search.py  routes_zotero.py  static.py
src/academic_mcp/webapp/: eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
src/academic_mcp/webapp/src/: index.css  main.tsx  router.ts  test-setup.ts
src/academic_mcp/webapp/src/api/: article.ts  auth.ts  client.ts  health.ts  saved.ts  search.ts
src/academic_mcp/webapp/src/components/: HighlightRail.tsx  HtmlViewer.tsx  PdfViewer.tsx  SectionOutline.tsx  Toast.tsx  TxtViewer.tsx
src/academic_mcp/webapp/src/lib/: domHighlight.test.ts  domHighlight.ts  viewerSelection.test.ts  viewerSelection.ts  zoteroDeeplink.ts
src/academic_mcp/webapp/src/routes/: ArticlePage.tsx  HealthPage.tsx  LoginPage.tsx  SearchPage.tsx
test_output/: 05f9db838cd244b4_current.txt  05f9db838cd244b4_pymupdf4llm.md  2f6cb8c958cb042f_current.txt  2f6cb8c958cb042f_pymupdf4llm.md  2fcc6f9681117761_current.txt  2fcc6f9681117761_pymupdf4llm.md  493ede6714fc2fdd_current.txt  493ede6714fc2fdd_pymupdf4llm.md  5e39b49854a1069a_current.txt  5e39b49854a1069a_pymupdf4llm.md  6000ff534eb72a8f_current.txt  6000ff534eb72a8f_pymupdf4llm.md  6b5a1d9820a9b53e_current.txt  6b5a1d9820a9b53e_pymupdf4llm.md  8a4726201f49cf77_current.txt  8a4726201f49cf77_pymupdf4llm.md  8ef723b4bc31a4e6_current.txt  8ef723b4bc31a4e6_pymupdf4llm.md  998dcc15e5e63d5a_current.txt  998dcc15e5e63d5a_pymupdf4llm.md  9c949a49ec00b450_current.txt  9c949a49ec00b450_pymupdf4llm.md  a0251569ef870084_current.txt  a0251569ef870084_pymupdf4llm.md  c397f26add218a57_current.txt  c397f26add218a57_pymupdf4llm.md  c9c64e9882f342fe_current.txt  c9c64e9882f342fe_pymupdf4llm.md  db40cc64454cac8f_current.txt  db40cc64454cac8f_pymupdf4llm.md  e16f62ccb534d5e4_current.txt  e16f62ccb534d5e4_pymupdf4llm.md  fefcf1383aac6f24_current.txt  fefcf1383aac6f24_pymupdf4llm.md
tests/: __init__.py  conftest.py  test_auth.py  test_chunking.py  test_cross_reranker.py  test_embeddings.py  test_fetch_golden.py  test_highlights.py  test_import_queue.py  test_persistence.py  test_pymupdf4llm.py  test_scite.py  test_semantic_index.py  test_text_cache.py  test_url_fallback.py  test_webapp_auth.py
tests/golden/: fetch_failure.txt  fetch_html_full.txt  fetch_html_preview.txt  fetch_html_range.txt  fetch_html_section.txt  fetch_html_sections.txt  fetch_pdf_full.txt  fetch_pdf_preview.txt  fetch_pdf_sections.txt
