[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-mcp-server"
version = "0.1.0"
description = "MCP server for academic paper search, PDF fetching, and text extraction"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx[socks]>=0.27.0",
    "pymupdf>=1.24.0",       # PDF text extraction (fitz)
    "python-dotenv>=1.0.0",
    "pyzotero>=1.6.0",       # Zotero API client
    "aiosqlite>=0.20.0",     # Native async SQLite (no thread-pool overhead)
    "sentence-transformers>=3.0.0",  # Semantic re-ranking (all-MiniLM-L6-v2)
    "numpy>=1.26.0",         # Required by sentence-transformers
    "trafilatura>=2.0.0",
    "rank-bm25>=0.2.2",
    "pymupdf4llm>=1.27.0",   # Markdown PDF extraction (tables, multi-column, bold/italic)
]

[project.optional-dependencies]
stealth = [
    "scrapling>=0.2",        # stealth browser
]

[tool.hatch.build.targets.wheel]
packages = ["src/academic_mcp"]
